--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 .input-icon {
     position: absolute;
     top: -5%;
-    padding: 0.625rem;
+    padding: 10px;
     color: var(--color-primary);
 }
 
